Version 2.5.1
-------------
Added Public APIs:
- MLMediaLibrary:
  - new selectors: libraryBasePath
                   additionalPersitentStoreOptions
                   objectForURIRepresentation:
                   migrateLibraryToBasePath
                   deviceSpeedCategory
- MLFile:
  - new selectors: setComputedThumbnailScaledForDevice

Version 2.5
-----------
- Updated database format allowing more meta data
- Stability improvements

Version 2.4
-----------
- NEW: code was upgraded to ARC
- FIX: library is no longer reset when upgrading iOS app through the store
- FIX: [] pattern is correctly removed from file titles

Added Public APIs:
- MLMediaLibrary
  - new selector: documentFolderPath

Version 2.3
-----------
- FIX: crash when deploying MLFile's unread property

Added Public APIs:
- MLFile:
  - new selectors: fileForURL
                   folderTrackNumber
- MLLabel:
  - new selector: sortedFolderItems
- MLMediaLibrary:
  - new selector: removeObject

Version 2.2.1
-------------
- FIX: incorrect return value for untitled TV shows
- FIX: crash in setter/getter for lastPosition and unread in MLFile
- Thumbnailer: use a special libVLC instance for thumbnails

Version 2.2
-----------
- FIX: correct subitem behavior of MLShow and MLAlbum on removal
- FIX: MLTitleDecrapifier handles shows with more than 99 and less than 1000
  episodes correctly now
- NEW: added user defaults option to disable file name display optimizations
  when media is newly added to the library
- FIX: thumbnails are correctly purged if a media item is removed

Added Public APIs:
- MLShow:
  - new selectors: removeEpisode:
                   removeEpisodeWithSeasonNumber:andEpisodeNumber:
                   sortedEpisodes
- MLAlbum:
  - new selectors: removeTrack:
                   removeTrackWithTrackNumber:
                   sortedTracks
- MLLabel:
  - new selector: allLabels

Version 2.1.3
-------------
- fix crash when processing files whose names are less than 6 characters long